# SO.Proyect

./: CMakeLists.txt  README.md  bridge.c  bridge.h  bridge_sim  bridge_simulation  config.c  config.h  config.txt  gui.c  gui.h  main.c  traffic_generator.c  traffic_generator.h  vehicle.c  vehicle.h
